@@ -182,7 +182,7 @@ static int aixrtl_flag;			/* true if -brtl */
 enum lto_mode_d {
   LTO_MODE_NONE,			/* Not doing LTO. */
   LTO_MODE_LTO,				/* Normal LTO. */
-  LTO_MODE_WPA				/* WHOPR. */
+  LTO_MODE_WHOPR			/* WHOPR. */
 };
 
 static enum lto_mode_d lto_mode = LTO_MODE_NONE; /* current LTO mode. */
@@ -196,7 +196,7 @@ static const char *o_file;		/* <xxx>.o for constructor/destructor list.  */
 #ifdef COLLECT_EXPORT_LIST
 static const char *export_file;		/* <xxx>.x for AIX export list.  */
 #endif
-static const char *lto_o_file;		/* Output file for LTO.  */
+static char **lto_o_files;		/* Output files for LTO.  */
 const char *ldout;			/* File for ld stdout.  */
 const char *lderrout;			/* File for ld stderr.  */
 static const char *output_file;		/* Output file for ld.  */
@@ -288,6 +288,7 @@ static void add_lto_object (struct lto_object_list *list, const char *name);
 static void do_wait (const char *, struct pex_obj *);
 static void fork_execute (const char *, char **);
 static void maybe_unlink (const char *);
+static void maybe_unlink_list (char **);
 static void add_to_list (struct head *, const char *);
 static int extract_init_priority (const char *);
 static void sort_ids (struct head *);
@@ -339,8 +340,8 @@ collect_exit (int status)
     maybe_unlink (export_file);
 #endif
 
-  if (lto_o_file != 0 && lto_o_file[0])
-    maybe_unlink (lto_o_file);
+  if (lto_o_files)
+    maybe_unlink_list (lto_o_files);
 
   if (ldout != 0 && ldout[0])
     {
@@ -451,8 +452,8 @@ handler (int signo)
     maybe_unlink (export_file);
 #endif
 
-  if (lto_o_file != 0 && lto_o_file[0])
-    maybe_unlink (lto_o_file);
+  if (lto_o_files)
+    maybe_unlink_list (lto_o_files);
 
   if (response_file)
     maybe_unlink (response_file);
@@ -872,14 +873,12 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
       const char **lto_c_ptr;
       const char *cp;
       const char **p, **q, **r;
+      const char **lto_o_ptr;
       struct lto_object *list;
-      bool first;
+      char *ltrans_output_file = NULL;
 
       /* There is at least one object file containing LTO info,
          so we need to run the LTO back end and relink.  */
-
-      /* Create a temporary file for the output of the LTO back end.  */
-      lto_o_file = make_temp_file (".lto.o");
 
       /* Get compiler options passed down from the parent `gcc' command.
          These must be passed to the LTO back end.  */
@@ -910,10 +909,33 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
       *lto_c_ptr++ = "-x";
       *lto_c_ptr++ = "lto";
       *lto_c_ptr++ = "-c";
-      *lto_c_ptr++ = "-o";
-      *lto_c_ptr++ = lto_o_file;
-      if (lto_mode == LTO_MODE_WPA)
-	*lto_c_ptr++ = "-fwpa";
+      if (lto_mode == LTO_MODE_LTO)
+	{
+	  lto_o_files = XNEWVEC (char *, 2);
+	  lto_o_files[0] = make_temp_file (".lto.o");
+	  lto_o_files[1] = NULL;
+
+	  *lto_c_ptr++ = "-o";
+	  *lto_c_ptr++ = lto_o_files[0];
+	}
+      else if (lto_mode == LTO_MODE_WHOPR)
+	{
+	  const char *list_option = "-fltrans-output-list=";
+	  size_t list_option_len = strlen (list_option);
+	  char *tmp;
+
+	  ltrans_output_file = make_temp_file(".ltrans.out");
+	  tmp = XNEWVEC (char,
+			 strlen (ltrans_output_file) + list_option_len + 1);
+	  *lto_c_ptr++ = tmp;
+	  strcpy (tmp, list_option);
+	  tmp += list_option_len;
+	  strcpy (tmp, ltrans_output_file);
+
+	  *lto_c_ptr++ = "-fwpa";
+	}
+      else
+	fatal ("invalid LTO mode");
 
       /* Add inherited GCC options to the LTO back end command line.
          Filter out some obviously inappropriate options that will
@@ -921,7 +943,7 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
          all of the remaining options on to LTO, and let it complain
          about any it doesn't like. Note that we invoke LTO via the
          `gcc' driver, so the usual option processing takes place.
-         Except for `-flto' and `-fwpa', we should only filter options that
+         Except for `-flto' and `-fwhopr', we should only filter options that
 	 are meaningful to `ld', lest an option go silently unclaimed.  */
 
       cp = opts;
@@ -930,7 +952,7 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
         {
           const char *s = extract_string (&cp);
 
-          if (strcmp (s, "-flto") == 0 || strcmp (s, "-fwpa") == 0)
+          if (strcmp (s, "-flto") == 0 || strcmp (s, "-fwhopr") == 0)
             /* We've handled this LTO option, don't pass it on.  */
             ;
           else if (strcmp (s, "-o") == 0)
@@ -947,12 +969,62 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
         }
       obstack_free (&temporary_obstack, temporary_firstobj);
 
+      /* Add LTO objects to the LTO command line.  */
+      for (list = lto_objects.first; list; list = list->next)
+	*lto_c_ptr++ = list->name;
+
+      *lto_c_ptr = NULL;
+
+      /* Run the LTO back end.  */
+      fork_execute ("gcc", lto_c_argv);
+
+      /* Read in the list of output file names.  */
+      if (lto_mode == LTO_MODE_WHOPR)
+	{
+	  int c;
+	  FILE *stream;
+	  size_t i, num_files;
+	  char *start, *end;
+
+	  stream = fopen (ltrans_output_file, "r");
+	  if (!stream)
+	    fatal_perror ("fopen: %s", ltrans_output_file);
+
+	  num_files = 0;
+	  while ((c = getc (stream)) != EOF)
+	    {
+	      obstack_1grow (&temporary_obstack, c);
+	      if (c == '\n')
+		++num_files;
+	    }
+
+	  if (fclose (stream))
+	    fatal_perror ("fclose: %s", ltrans_output_file);
+
+	  lto_o_files = XNEWVEC (char *, num_files + 1);
+	  lto_o_files[num_files] = NULL;
+
+	  start = XOBFINISH (&temporary_obstack, char *);
+	  for (i = 0; i < num_files; ++i)
+	    {
+	      end = start;
+	      while (*end != '\n')
+		++end;
+	      *end = '\0';
+
+	      lto_o_files[i] = xstrdup (start);
+
+	      start = end + 1;
+	    }
+
+	  obstack_free (&temporary_obstack, temporary_firstobj);
+	}
+
       /* After running the LTO back end, we will relink, substituting
 	 the LTO output for the object files that we submitted to the
 	 LTO. Here, we modify the linker command line for the relink.  */
-      first = true;
-
       p = (const char **)lto_ld_argv;
+      lto_o_ptr = (const char **)lto_o_files;
 
       while (*p != NULL)
         {
@@ -960,16 +1032,11 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
             {
               if (*p == list->name) /* Note test for pointer equality!  */
                 {
-                  /* Add file to the LTO command line.  */
-                  *lto_c_ptr++ = list->name;
-
                   /* Excise argument from linker command line.  */
-                  if (first)
+                  if (*lto_o_ptr)
                     {
                       /* Replace first argument with LTO output file.  */
-                      *p = lto_o_file;
-                      first = false;
-                      ++p;
+                      *p++ = *lto_o_ptr++;
                     }
                   else
                     {
@@ -993,17 +1060,20 @@ maybe_run_lto_and_relink (char **lto_ld_argv, char **object_lst,
           if (!list) ++p;
         }
 
-      *lto_c_ptr = NULL;
-
-      /* Run the LTO back end.  */
-      fork_execute ("gcc", lto_c_argv);
+      /* The code above assumes we will never have more lto output files than
+	 input files.  Otherwise, we need to resize lto_ld_argv.  Check this
+	 assumption.  */
+      if (*lto_o_ptr)
+	fatal ("too many lto output files");
 
       /* Run the linker again, this time replacing the object files
          optimized by the LTO with the temporary file generated by the LTO.  */
       fork_execute ("ld", lto_ld_argv);
 
       /* Clean up the temporary file.  */
-      maybe_unlink (lto_o_file);
+      if (ltrans_output_file)
+	maybe_unlink (ltrans_output_file);
+      maybe_unlink_list (lto_o_files);
     }
   else if (force)
     {
@@ -1120,7 +1190,7 @@ main (int argc, char **argv)
 
   /* Parse command line early for instances of -debug.  This allows
      the debug flag to be set before functions like find_a_file()
-     are called. We also look for the -flto or -fwpa flag, though it is not
+     are called. We also look for the -flto or -fwhopr flag, though it is not
      necessary to do so at this early stage. */
   {
     int i;
@@ -1131,8 +1201,8 @@ main (int argc, char **argv)
 	  debug = 1;
         else if (! strcmp (argv[i], "-flto"))
           lto_mode = LTO_MODE_LTO;
-        else if (! strcmp (argv[i], "-fwpa"))
-          lto_mode = LTO_MODE_WPA;
+        else if (! strcmp (argv[i], "-fwhopr"))
+          lto_mode = LTO_MODE_WHOPR;
       }
     vflag = debug;
   }
@@ -1381,7 +1451,7 @@ main (int argc, char **argv)
 	      break;
 
             case 'f':
-              if (strcmp (arg, "-flto") == 0 || strcmp (arg, "-fwpa") == 0)
+              if (strcmp (arg, "-flto") == 0 || strcmp (arg, "-fwhopr") == 0)
               {
                 /* Do not pass LTO flag to the linker. */
                 ld1--;
@@ -1959,6 +2029,17 @@ maybe_unlink (const char *file)
     unlink_if_ordinary (file);
   else
     notice ("[Leaving %s]\n", file);
+}
+
+/* Call maybe_unlink on the NULL-terminated list, FILE_LIST.  */
+
+static void
+maybe_unlink_list (char **file_list)
+{
+  char **tmp = file_list;
+
+  while (*tmp)
+    maybe_unlink (*(tmp++));
 }
 
 
