@@ -54,12 +54,12 @@ case ${query} in
       echo ${CC}
       ;;
     --cxxflags)
-      CXXFLAGS_default="-O2 -flto -D_GLIBCXX_ASSERT -fmessage-length=0"
+      CXXFLAGS_default="-O2 -fwhopr -D_GLIBCXX_ASSERT -fmessage-length=0"
       CXXFLAGS_config="@SECTION_FLAGS@ @CXXFLAGS@ @EXTRA_CXX_FLAGS@"
       echo ${CXXFLAGS_default} ${CXXFLAGS_config}
       ;;
     --cxxparallelflags)
-      CXXFLAGS_parallel="-flto -D_GLIBCXX_PARALLEL -fopenmp
+      CXXFLAGS_parallel="-fwhopr -D_GLIBCXX_PARALLEL -fopenmp
 			 -B${BUILD_DIR}/../libgomp 
                          -I${BUILD_DIR}/../libgomp 
 			 -L${BUILD_DIR}/../libgomp/.libs -lgomp"
